Added: horizontal and vertical ScrollView; SafeAreaView; Modified: Card.js now receives props

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "demo-app",
-    "slug": "native-app",
+    "name": "demo-card-app",
+    "slug": "demo-card-native-app",
     "privacy": "public",
     "sdkVersion": "36.0.0",
     "platforms": [
@@ -26,6 +26,7 @@
     "ios": {
       "supportsTablet": true
     },
-    "description": ""
+    "description": "",
+    "githubUrl": "https://github.com/slackerwx/native-app/tree/feature/card_view"
   }
 }
