--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-web": "~0.11.7",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
     "styled-components": "^4.4.1"
   },
   "devDependencies": {
