--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "expo-blur": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
