--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.5",
     "expo": "~36.0.0",
+    "expo-blur": "~8.0.0",
+    "lottie-react-native": "^3.3.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
@@ -23,8 +25,7 @@
     "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
-    "styled-components": "^4.4.1",
-    "expo-blur": "~8.0.0"
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
