--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/masked-view": "^0.1.5",
     "expo": "~36.0.0",
     "expo-blur": "~8.0.0",
+    "firebase": "^7.6.2",
     "lottie-react-native": "^3.3.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
